--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </header>
   <main>
     <section>
-      <div class="wrapper center">
-        <ul id="color-palette">
+      <div id="color-palette" class="wrapper center">
+        <ul>
           <li class="color">
             <div class="always-black"></div>
           </li>
