--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section>
       <div class="wrapper center fit-content">
-        <input id="board-size" class='font-big' type="number" min="0" value="5">
+        <input id="board-size" class='font-big' type="number" min="0" max="50" step="1">
         <button id="generate-board" class="btn-criar font-big">VQV</button>
         <button id='clear-board' class="btn-reset font-big center clearfix">Limpar</button>
       </div>
