vamos que vamos cyspress!

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
   </section>
 
   <section id="board-config" class="fit-content">
+    <input type="number" id="board-size" min="0" max="50">
+    <button id="generate-board">VQV</button>
     <button id="clear-board">Limpar</button>
     <div class="clearfix"></div>
   </section>
 
-  <section id="pixel-board" class="fit-content">
+  <section id="pixel-board">
     <div class="clearfix"></div>
   </section>
 
